# agriculture-mcp-server

./: README.md  pyproject.toml
src/: config.py  server.py
src/clients/: nasa_power.py  openfoodfacts.py  openmeteo.py  worldbank.py
src/tools/: crop_weather.py  food.py  soil.py  statistics.py
