[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agriculture-mcp-server"
version = "0.1.0"
description = "MCP-Server for agriculture data — soil conditions, crop weather, global statistics, food products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AiAgentKarl" }]
keywords = ["mcp", "agriculture", "farming", "agtech", "ai-agent", "soil", "weather", "crops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agriculture-mcp-server"
Repository = "https://github.com/AiAgentKarl/agriculture-mcp-server"

[project.scripts]
agriculture-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
